--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "moneymakingmakingweb",
+  "name": "template",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.2",
-    "@fortawesome/free-solid-svg-icons": "^5.2.0",
-    "@fortawesome/react-fontawesome": "^0.1.2",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
-    "react": "^16.4.2",
-    "react-activity": "^1.2.2",
-    "react-dom": "^16.4.2",
-    "react-fontawesome": "^1.6.1",
-    "react-progress-button": "^5.1.0",
-    "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0",
-    "redux": "^4.0.0",
-    "redux-form": "^7.4.2"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "vee-validate": "^2.1.0-beta.11",
+    "vue": "^2.5.17",
+    "vue-class-component": "^6.0.0",
+    "vue-fab": "^2.1.4",
+    "vue-json-pretty": "^1.4.1",
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-moment": "^4.0.0",
+    "vue-property-decorator": "^7.0.0",
+    "vue-router": "^3.0.1",
+    "vue-smooth-dnd": "^0.2.5",
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.0.1",
+    "vuex-toast": "^0.1.3"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-unit-mocha": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "chai": "^4.1.2",
+    "vue-template-compiler": "^2.5.17"
   }
 }
